--- a/Assignment7.html
+++ b/Assignment7.html
@@ -32,7 +32,17 @@
 	<head>
 	  <title>Selectors Exercise</title>
 	  <style>
-	  
+      body{background-color: #bdc3c7}
+      h1{color: #9b59b6}
+      h2{color: orange}
+      li{color: #1C17FF}
+      p{background-color: yellow}
+      .hello{background-color: white}
+      #special{border-style:solid; border-color: blue; border-width: 2px}
+      div p{font-size:25px}
+      .third p{background-color: pink}
+      .third a{font-size:25px}
+      a{font-size: 30px}
 	  </style>
 	</head>
 	<body>
