--- a/Assignment4.html
+++ b/Assignment4.html
@@ -6,7 +6,8 @@
 	<head>
 		<title>CSS Combinations 4</title>
 		<style>
-
+        span{color: red}
+        div > p{color: red}
 		</style>
 	</head>
 	
