--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     </head>
     
     <body>
-	
+      <a href="Assignment3.html">Assignment 3</a><br>
+      <a href="Assignment4.html">Assignment 4</a><br>
+      <a href="Assignment5.html">Assignment 5</a><br>
+      <a href="Assignment6.html">Assignment 6</a><br>
+      <a href="Assignment7.html">Assignment 7</a>
     </body>
 </html>
